fixed show scrollbar on the page RecentFiles => Cabinet

--- a/src/Pages/Cabinet/Components/RecentFiles/RecentFiles.module.sass
+++ b/src/Pages/Cabinet/Components/RecentFiles/RecentFiles.module.sass
@@ -1,7 +1,7 @@
 .wrap
   display: flex
   box-sizing: border-box
-  max-width: 100%
+  //max-width: 100%
   width: 100%
   margin: 10px
   box-shadow: 0 1px 3px #DEDEDE
@@ -22,9 +22,10 @@
     display: flex
     align-items: center
     height: 58px
-    width: max-content
+    width: auto
     max-width: max-content
     min-width: max-content
+    overflow: hidden
 
 
 .chosen
